--- a/Frontend/Web/index.html
+++ b/Frontend/Web/index.html
@@ -9,5 +9,14 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdDsyQ3mxGGix5HiKOphWo1b4RW-Nxqis&callback=initMap&libraries=places"></script>
+    <script>
+      function initMap() {
+          const map = new google.maps.Map(document.getElementById("map"), {
+              center: { lat: -34.397, lng: 150.644 },
+              zoom: 8
+          });
+      }
+  </script>
   </body>
 </html>
